[package]
name = "secure-file-sharing-server"
version = "1.0.0"
edition = "2018"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
bcrypt = "0.10"
rand = "0.8"
